tests/errors/no_main.con
# no `main` function
fn not_main() {}

fn also_not_main() {}
